--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
+  "name": "json-server-vercel",
+  "version": "1.0.0",
+  "description": "Deploy JSON Server to Vercel",
+  "main": "api/server.js",
   "scripts": {
-    "start": "json-server --watch db.json --port 3000"
+    "start": "node api/server.js"
   },
   "dependencies": {
-    "json-server": "^0.17.3"
+    "json-server": "^0.17.4"
   }
 }
