--- a/package.json
+++ b/package.json
@@ -1,12 +1,8 @@
 {
-  "name": "json-server-vercel",
-  "version": "1.0.0",
-  "description": "Deploy JSON Server to Vercel",
-  "main": "api/server.js",
   "scripts": {
-    "start": "node api/server.js"
+    "start": "json-server --watch db.json --port 3000"
   },
   "dependencies": {
-    "json-server": "^0.17.4"
+    "json-server": "^0.17.3"
   }
 }
